@@ -1,3 +1,9 @@
+2005-01-09  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
+
+	* gobject/pygtype.c (pyg_value_from_pyobject): Be consistent about
+	not raising an exception on error return.
+	Patch by jylefort@brutele.be, fixes #160595.
+
 2004-12-10  John Ehresman  <jpe@wingide.com>
 
 	* gobject/pygobject.h: Change PY_HEXVERSION to PY_VERSION_HEX
